add the edit task basic fonctionality

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <body>
     
     <div class="container">
-        <form class="form">
+        <form class="form add-form">
             <input type="text" class="input">
             <button type="submit" class="add">Add Task</button>
         </form>
@@ -31,7 +31,15 @@
             </ul>
         </nav>
         <div class="tasks">
-            
+        </div>
+        <div class="edit-page">
+            <div class="container">
+                <form class="form edit-form">
+                    <input name="text" type="text" class="input">
+                    <button type="submit" class="edit-btn">Edit Task</button>
+                    <div class="cancel-btn">Cancel</div>
+                </form>
+            </div>
         </div>
     </div>
 
